[SWBIT-2627] Support HW Automated Tests

--- a/app/index.html
+++ b/app/index.html
@@ -170,6 +170,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/HubsApi.js"></script>
     <script src="scripts/constants/hardware.js"></script>
+    <script src="scripts/constants/programHex.js"></script>
     <script src="scripts/factories/WSHubsAPI.js"></script>
     <script src="scripts/factories/lodash.js"></script>
     <script src="scripts/factories/bloqs.js"></script>
