--- a/app/index.html
+++ b/app/index.html
@@ -166,8 +166,9 @@
     <script src="res/vendor/moment.js"></script>
     <!-- endbuild -->
     <script src="res/config/config.js"></script>
-    <script src="res/config/makeConfig.js"></script>
+
     <!-- build:js({.tmp,app}) scripts/main.js -->
+    <script src="scripts/makeConfig.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/HubsApi.js"></script>
     <script src="scripts/constants/hardware.js"></script>
