added node_modules folder to avoid use bower. Adding web2boardjs

--- a/app/index.html
+++ b/app/index.html
@@ -166,6 +166,7 @@
     <script src="res/vendor/moment.js"></script>
     <!-- endbuild -->
     <script src="res/config/config.js"></script>
+    <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/main.js -->
     <script src="scripts/makeConfig.js"></script>
@@ -210,6 +211,7 @@
     <script src="scripts/services/hardwareService.js"></script>
     <script src="scripts/services/supportApi.js"></script>
     <script src="scripts/services/web2boardOnline.js"></script>
+    <script src="scripts/services/web2boardjs.js"></script>
     <script src="scripts/directives/beautyCode.js"></script>
     <script src="scripts/directives/bitbloqBloqCreator.js"></script>
     <script src="scripts/directives/commonDropdown.js"></script>
