--- a/app/index.html
+++ b/app/index.html
@@ -219,6 +219,7 @@
     <script src="scripts/directives/imageChange.js"></script>
     <script src="scripts/directives/moveNextOnMaxlength.js"></script>
     <script src="scripts/directives/bitbloqTooltip.js"></script>
+    <script src="scripts/directives/konami.js"></script>
     <script src="scripts/controllers/landing.js"></script>
     <script src="scripts/controllers/body.js"></script>
     <script src="scripts/controllers/account.js"></script>
