add data-element to 'No aceptar coockies' button

--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@
         <button data-element="cookies" class="btn btn--close--cookies" ng-click="common.acceptCookies()">
             {{'accept' | translate}}
         </button>
-        <a href="http://bq.com">{{'reject' | translate}}</a>
+        <a data-element="notAcceptCookies"href="http://bq.com">{{'reject' | translate}}</a>
     </div>
     <canvas id="testcanvas" style="background-color: white; width: 285px; height: 190px;" class="invisible"></canvas>
     <script src="https://www.youtube.com/iframe_api"></script>
