--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
     <link rel="apple-touch-icon" href="images/common/touch-icon.png">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- build:css({.tmp,app,.}) styles/main.css -->
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.css" />
     <!-- bower:css -->
@@ -85,7 +85,7 @@
         <button data-element="cookies" class="btn btn--close--cookies" ng-click="common.acceptCookies()">
             {{'accept' | translate}}
         </button>
-        <a data-element="not-accept-cookies" href="http://bq.com">{{'reject' | translate}}</a>
+        <a href="http://bq.com" data-element="notAcceptCookies">{{'reject' | translate}}</a>
     </div>
     <canvas id="testcanvas" style="background-color: white; width: 285px; height: 190px;" class="invisible"></canvas>
     <script src="https://www.youtube.com/iframe_api"></script>
@@ -166,9 +166,7 @@
     <script src="res/vendor/moment.js"></script>
     <!-- endbuild -->
     <script src="res/config/config.js"></script>
-
     <!-- build:js({.tmp,app}) scripts/main.js -->
-    <script src="scripts/makeConfig.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/HubsApi.js"></script>
     <script src="scripts/constants/hardware.js"></script>
@@ -208,7 +206,6 @@
     <script src="scripts/services/userRobotsApi.js"></script>
     <script src="scripts/services/hardwareApi.js"></script>
     <script src="scripts/services/hardwareService.js"></script>
-    <script src="scripts/services/supportApi.js"></script>
     <script src="scripts/services/web2boardOnline.js"></script>
     <script src="scripts/directives/beautyCode.js"></script>
     <script src="scripts/directives/bitbloqBloqCreator.js"></script>
@@ -219,7 +216,6 @@
     <script src="scripts/directives/imageChange.js"></script>
     <script src="scripts/directives/moveNextOnMaxlength.js"></script>
     <script src="scripts/directives/bitbloqTooltip.js"></script>
-    <script src="scripts/directives/konami.js"></script>
     <script src="scripts/controllers/landing.js"></script>
     <script src="scripts/controllers/body.js"></script>
     <script src="scripts/controllers/account.js"></script>
