Add bioblocks dependencies

--- a/app/index.html
+++ b/app/index.html
@@ -258,6 +258,23 @@
     <script src="scripts/controllers/under14authorization.js"></script>
     <script src="scripts/controllers/exercise.js"></script>
     <script src="scripts/controllers/support.js"></script>
+    <script src="scripts/bioblocks/containerLib.js"></script>
+    <script src="scripts/bioblocks/pipetteLib.js"></script>
+    <script src="scripts/bioblocks/centrifugation.js"></script>
+    <script src="scripts/bioblocks/electrophoresis.js"></script>
+    <script src="scripts/bioblocks/incubate.js"></script>
+    <script src="scripts/bioblocks/thermocycling.js"></script>
+    <script src="scripts/bioblocks/measurement.js"></script>
+    <script src="scripts/bioblocks/sangerSequencing.js"></script>
+    <script src="scripts/bioblocks/experiment.js"></script>
+    <script src="scripts/bioblocks/oligosynthesize.js"></script>
+    <script src="scripts/bioblocks/colonyPicking.js"></script>
+    <script src="scripts/bioblocks/cellSpreading.js"></script>
+    <!-- <script src="scripts/bioblocks/flowCitometry.js"></script> -->
+    <script src="scripts/bioblocks/flashFreeze.js"></script>
+    <script src="scripts/bioblocks/step.js"></script>
+    <script src="scripts/bioblocks/mix.js"></script>
+    <script src="scripts/bioblocks/turbidostat.js"></script>
     <!-- endbuild -->
 </body>
 
