Auto stash before merge of "develop" and "origin/develop"

--- a/app/index.html
+++ b/app/index.html
@@ -147,6 +147,8 @@
     <script src="bower_components/autogrow/autogrow.js"></script>
     <script src="bower_components/q/q.js"></script>
     <script src="bower_components/bloqs/dist/bloqs.min.js"></script>
+    <script src="bower_components/bioblocks-editor/editor.js"></script>
+    <script src="bower_components/closure-library/closure/goog/base.js"></script>
     <!-- endbower -->
     <!-- jsrsasign: manual injection -->
     <script src="bower_components/ace-builds/src-min/ace.js"></script>
